# gltut2

./: CMakeLists.txt  OpenGLWindow.cpp  OpenGLWindow.h  TutorialWindow.cpp  TutorialWindow.h  main.cpp  resources.qrc
shaders/: fragment.glsl  vertex.glsl
